// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> component renders button html element with the correct title 1`] = `
.emotion-0 {
  border: 0;
  text-transform: uppercase;
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  font-weight: 700;
  border-radius: 3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  white-space: nowrap;
  cursor: pointer;
  max-width: 20vw;
  padding: 0px 15px;
  height: 32px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: #FFFFFF;
  background-color: #002441;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: default;
}

.emotion-0:disabled {
  pointer-events: none;
}

.emotion-0:hover {
  color: #FFFFFF;
  background-color: #01508E;
}

<div>
  <button
    class="emotion-0 emotion-1"
    color="primary"
    data-testid="primary-button"
  >
    Primary
  </button>
</div>
`;

exports[`<Button /> component when loading is true renders a spinner dark theme when variant is outlined 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0);
    -moz-transform: rotate(0);
    -ms-transform: rotate(0);
    transform: rotate(0);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0);
    -moz-transform: rotate(0);
    -ms-transform: rotate(0);
    transform: rotate(0);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  border: 1px solid;
  text-transform: uppercase;
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  font-weight: 700;
  border-radius: 3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  white-space: nowrap;
  cursor: pointer;
  max-width: 20vw;
  padding: 0px 15px;
  height: 32px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  gap: 14px;
  pointer-events: none;
  color: #002441;
  background-color: #FFFFFF;
}

.emotion-0:disabled {
  color: #002441;
  background-color: #FFFFFF;
  border-color: #002441;
  cursor: default;
}

.emotion-0:disabled {
  pointer-events: none;
}

.emotion-0:hover {
  color: #002441;
  background-color: #036DC1;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  width: 20px;
  height: 20px;
  border: 2px solid #323232;
  border-radius: 50%;
  border-top: 2px solid #002441;
  -webkit-animation: animation-0 1s cubic-bezier(0.3, 0.1, 0.25, 0.65) 0s infinite normal none;
  animation: animation-0 1s cubic-bezier(0.3, 0.1, 0.25, 0.65) 0s infinite normal none;
}

<div>
  <button
    class="emotion-0 emotion-1"
    color="primary"
    data-testid="undefined-button"
  >
    Button loading
    <div
      class="emotion-2 emotion-3"
      style="margin: auto;"
    >
      <div
        class="emotion-4 emotion-5"
      />
    </div>
  </button>
</div>
`;

exports[`<Button /> component when loading is true renders a spinner light theme 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0);
    -moz-transform: rotate(0);
    -ms-transform: rotate(0);
    transform: rotate(0);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  border: 0;
  text-transform: uppercase;
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  font-weight: 700;
  border-radius: 3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  white-space: nowrap;
  cursor: pointer;
  max-width: 20vw;
  padding: 0px 15px;
  height: 32px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  gap: 14px;
  pointer-events: none;
  color: #FFFFFF;
  background-color: #002441;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: default;
}

.emotion-0:disabled {
  pointer-events: none;
}

.emotion-0:hover {
  color: #FFFFFF;
  background-color: #01508E;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  width: 20px;
  height: 20px;
  border: 2px solid rgba(255,255,255,0.4);
  border-radius: 50%;
  border-top: 2px solid #FFFFFF;
  -webkit-animation: animation-0 1s cubic-bezier(0.3, 0.1, 0.25, 0.65) 0s infinite normal none;
  animation: animation-0 1s cubic-bezier(0.3, 0.1, 0.25, 0.65) 0s infinite normal none;
}

<div>
  <button
    class="emotion-0 emotion-1"
    color="primary"
    data-testid="undefined-button"
  >
    Button loading
    <div
      class="emotion-2 emotion-3"
      style="margin: auto;"
    >
      <div
        class="emotion-4 emotion-5"
      />
    </div>
  </button>
</div>
`;
